--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -1,3 +1,3 @@
-John Latzer Home Page
-
-This is my project for BACS 200, project 1
+<h1>BACS 200 - John Latzer</h1>
+<p>I am learning HTML in BACS 200.</p>
+<p>I hope it starts getting fun.</p>
