--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -1,3 +1,6 @@
-<h1>BACS 200 - John Latzer</h1>
-<p>I am learning HTML in BACS 200.</p>
-<p>I hope it starts getting fun.</p>
+<h1>BACS 200 Folder</h1>
+<p>This is where you build you pages.</p>
+<ul>
+    <li>Week 1 - <a href="../index.html">Project 1 - Github Repo</a> </li>
+    <li>Week 2 - <a href="inspire.html">Project 2 - Inspire Me</a> </li>
+</ul>
