--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-<h1>Tony Stark Home Page</h1>
+<h!DOCTYPE html>
+    <html lang="en">
+     
+    <head></head>
+    </html>
+</h><h1>Tony Stark Home Page</h1>
 <p>I'm also known as Iron Man</p>
