--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
      
     <head></head>
     </html>
-</h><h1>Tony Stark Home Page</h1>
+</h><h1>John Latzer Home Page</h1>
 <p>I'm also known as Iron Man</p>
