--- a/bacs200/amuse.html
+++ b/bacs200/amuse.html
@@ -12,7 +12,7 @@
         <img src="https://shrinking-world.com/static/images/unc/bacs200/Bear_Logo.png" alt="Logo">
         <h2>Amusement #1</h2>
         <p>This website has 150 Dad jokes, my favorite! </p>
-        <p>Which ones do you think are the best, or are they the worst? </p>
+        <p>Which ones do you think are the best? </p>
         <p><a href="https://bestlifeonline.com/dad-jokes-so-bad-theyre-actually-hilarious/">See them all here!</a></p>
         
     </body>
