--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -11,8 +11,8 @@
 <body>
 <h1>My Profile</h1>
 <p>This is a profile of John Latzer, third year student in the Monfort College of Business</p>
-<img src="https://pbs.twimg.com/profile_images/1310108871168458752/dAIrTw-L.jpg" alt="John Latzer" width="200">
-<img src="https://www.unco.edu/_resources/images/core/branding/UNC2015-Header-blue-text.png"> alt="UNCO" width="200"
+<p><img src="https://pbs.twimg.com/profile_images/1310108871168458752/dAIrTw-L.jpg" alt="John Latzer" width="200"></p>
+<p><img src="https://www.unco.edu/_resources/images/core/branding/UNC2015-Header-blue-text.png" alt="UNCO" width="200"></p>>
 <p><a href=".">Return to BACS 200 Directory</a></p>
 </body>
 
