--- a/bacs200/amuse.html
+++ b/bacs200/amuse.html
@@ -13,7 +13,16 @@
         <h2>Amusement #1</h2>
         <p>This website has 150 Dad jokes, my favorite! </p>
         <p>Which ones do you think are the best? </p>
-        <p><a href="https://bestlifeonline.com/dad-jokes-so-bad-theyre-actually-hilarious/">See them all here!</a></p>
+        <p><a href="https://bestlifeonline.com/dad-jokes-so-bad-theyre-actually-hilarious/">Dad Jokes</a></p>
         
+        <h2>Amusement #2</h2>
+        <p>This website has funny stories from people who worked in customer service. </p>
+        <p>This one hits home, as customer service is the most important part of my retail job </p>
+        <p><a href="https://notalwaysright.com/tag/customer-service/">Customer Service!</a></p>
+        
+        <h2>Amusement #3</h2>
+        <p>This video has some funny, but confused, dog videos. </p>
+        <p>Who doesn't love a good pup? </p>
+        <p><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjfn7a4jfbyAhVYop4KHasSBAIQtwJ6BAgOEAM&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DL2ZxBtC9DjQ&usg=AOvVaw0nwGvdhpeMIor2GKtXHkTp">Dog Videos!</a></p>
     </body>
 </html>
