--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -3,41 +3,39 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Educate and Entertain</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 
 <body>
-    <h1>Educate</h1>
-    <h2>TED Talks</h2>
-    <h3>Matthew Youlden - How to learn any language easily</h3>
-    <iframe width="780" height="439" src="https://youtu.be/Yr_poW-KK1Q"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    <h1>My Headline</h1>
+    <h2>A subheadline</h2>
+    <p>This is my text</p>
+    <a href="http://google.com">Google.com</a>
 
-    </iframe>
-    <ul>
-        <li>Idea #1</li>
-        <li>Idea #2</li>
-        <li>Idea #3</li>
-    </ul>
+    <ol>
+        <li>List item number one</li>
+        <li>List item two</li>
+    </ol>
 
-    <h3>Adam Grant - Originals</h3>
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/fxbCHn6gE3U"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-    <hr>
-
-    <h2>RSA Animate</h2>
-    <h3>Daniel Pink - Drive</h3>
-    <iframe width="780" height="439" src="https://www.youtube.com/embed/IhJ4CDCfASI"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>
-    <p>
-        video #2
-    </p>
-    <h3>Divided Brain</h3>
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/dFs9WO2B8uI"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <table>
+        <tr>
+            <td>Mark Seaman</td>
+            <td>Row 1, Col 2</td>
+            <td>Row 1, Col 3</td>
+        </tr>
+        <tr>
+            <td>George Washington</td>
+            <td>xxxxxxxxxxxxxxxxxxxxxxxxxxx</td>
+            <td>xxxxxxxxxxxxxxxxxxxxxxxxxxx</td>
+        </tr>
+        <tr>
+            <td>Abe Lincoln</td>
+            <td>Row 3, Col 2</td>
+            <td>Row 3, Col 3</td>
+        </tr>
+    </table>
 </body>
 
 </html>
