--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -5,25 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Educate and Entertain</title>
 </head>
 
 <body>
-    <h1>My Headline</h1>
-    <h2>A subheadline</h2>
-    <p>This is my text</p>
-    <a href="http://google.com">Google.com</a>
-
-    <ol>
-        <li>List item number one</li>
-        <li>List item two</li>
-    </ol>
-
     <table>
         <tr>
-            <td>Mark Seaman</td>
-            <td>Row 1, Col 2</td>
-            <td>Row 1, Col 3</td>
+            <td>Martin Hagger - Sport Psychology</td>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/yG7v4y_xwzQ"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></td>
+            <td>This TedTalk is based on what sets champion/elite level athletes apart from not only the average human
+                being, but also less successful atheltes.</td>
         </tr>
         <tr>
             <td>George Washington</td>
