--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -12,7 +12,7 @@
     <table>
         <tr>
             <td>Martin Hagger - Sport Psychology</td>
-            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/yG7v4y_xwzQ"
+            <td><iframe width="250" height="125" src="https://www.youtube.com/embed/yG7v4y_xwzQ"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe></td>
@@ -20,14 +20,22 @@
                 being, but also less successful atheltes.</td>
         </tr>
         <tr>
-            <td>George Washington</td>
-            <td>xxxxxxxxxxxxxxxxxxxxxxxxxxx</td>
-            <td>xxxxxxxxxxxxxxxxxxxxxxxxxxx</td>
+            <td>Matthew Youlden - How to learn any language easily</td>
+            <td><iframe width="250" height="125" src="https://www.youtube.com/embed/Yr_poW-KK1Q"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></td>
+            <td>This TedTalk is given by a gentleman who happens to be a Polyglot, and is giving some steps to learning
+                a new language, and also shuts down some common misconceptions regarding language learning.</td>
         </tr>
         <tr>
-            <td>Abe Lincoln</td>
-            <td>Row 3, Col 2</td>
-            <td>Row 3, Col 3</td>
+            <td>Stephen Webb - Where are all the aliens?</td>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/qaIghx4QRN4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></td>
+            <td>In this Talk, an astronomer gives insight into how many obstacles a planet would need to clear prior to
+                being able to host a civilization.</td>
         </tr>
     </table>
 </body>
