--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -15,7 +15,7 @@
             <td><iframe width="250" height="125" src="https://www.youtube.com/embed/yG7v4y_xwzQ"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe></td>
+                    allowfullscreen></td>
             <td>This TedTalk is based on what sets champion/elite level athletes apart from not only the average human
                 being, but also less successful atheltes.</td>
         </tr>
