--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="images/Bear.png" alt="UNC Bear">
+    <img src=" <img src=" images/Bear.png" alt="UNC Bear">" alt="UNC Bear">
     <h1>BACS 200 Folder</h1>
     <p>Projects for this class</p>
     <ul>
