--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -38,6 +38,16 @@
                 being able to host a civilization.</td>
         </tr>
     </table>
+    <table>
+        <tr>
+            <td>RSA ANIMATE - Iain McGilchrist - The Divided Brain</td>
+            <td><iframe width="250" height="125" src="https://www.youtube.com/embed/dFs9WO2B8uI"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></td>
+            <td>This animation shows how our brain has altered behavior, society, and culuture.</td>
+        </tr>
+    </table>
 </body>
 
 </html>
