--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -57,23 +57,37 @@
             <td>Project #2</td>
             <td><a href="inspire.html">Inspire Me</a></td>
             <td><a href="https://shrinking-world.com/course/bacs200/project/02" target="instruction">Project 2</a></td>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmark-seaman.github.io%2Fbacs200%2Findex.html">
+                HTML
+                Validator
+            </a>
         </tr>
         <tr>
             <td>Project #3</td>
             <td><a href="amuse.html">Amuse Me</a></td>
             <td><a href="https://shrinking-world.com/course/bacs200/project/03" target="instruction">Project 3</a></td>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmark-seaman.github.io%2Fbacs200%2Findex.html">
+                HTML
+                Validator
+            </a>
         </tr>
         <tr>
             <td>Project #4</td>
             <td><a href="educate.html">Educate Me</a></td>
             <td><a href="https://shrinking-world.com/course/bacs200/project/04" target="instruction">Project 4</a></td>
-
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmark-seaman.github.io%2Fbacs200%2Findex.html">
+                HTML
+                Validator
+            </a>
         </tr>
         <tr>
             <td>Project #5</td>
             <td><a href="test.html">Test Me</a></td>
             <td><a href="https://shrinking-world.com/course/bacs200/project/05" target="instruction">Project 5</a></td>
-
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmark-seaman.github.io%2Fbacs200%2Findex.html">
+                HTML
+                Validator
+            </a>
         </tr>
     </table>
 
