--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>BACS 200 - Week #7</title>
+    <title>BACS 200 - Week #7 Wanted Poster</title>
     <link href="unc.css" rel="stylesheet">
 </head>
 
