--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -2,7 +2,20 @@
 <html lang="en">
 
 <head>
-    <title>SuperHero</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Superhero Gallery</title>
+    <style media="screen">
+        table {
+            border-collapse: collapse;
+            border: 1px solid #000000;
+        }
+
+        table td {
+            border: 1px solid #000000;
+        }
+    </style>
 </head>
 <table>
     <tr>
