--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -17,41 +17,47 @@
         }
     </style>
 </head>
-<table>
-    <tr>
-        <th>Name</th>
-        <th>Alias</th>
-        <th>Image</th>
-        <th>Weakness</th>
-        <th>Superpower</th>
-    </tr>
-    <tr>
-        <td>Batman</td>
-        <td>Superman</td>
-        <td>Ironman</td>
-        <td>Hulk</td>
-        <td>SpiderMan</td>
-    </tr>
-    <tr>
-        <td>Bruce Wayne</td>
-        <td>Clark Kent</td>
-        <td>Tony Stark</td>
-        <td>Hulk</td>
-        <td>Peter Parker</td>
-    </tr>
 
-    <tr>
-        <td>Cannot kill</td>
-        <td>Kryptonite</td>
-        <td>HeartIssues</td>
-        <td>Self Control</td>
-        <td>Ethyl chloride</td>
-    </tr>
-    <tr>
-        <td>Bat like skills</td>
-        <td>Superhuman strength</td>
-        <td>Ability to fly</td>
-        <td>Incredible superhuman strength</td>
-        <td>"Spider" sense alert</td>
-    </tr>
-</table>
+<body>
+    <h1>SuperHero Gallery</h1>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Alias</th>
+            <th>Image</th>
+            <th>Weakness</th>
+            <th>Superpower</th>
+        </tr>
+        <tr>
+            <td>Batman</td>
+            <td>Superman</td>
+            <td>Ironman</td>
+            <td>Hulk</td>
+            <td>SpiderMan</td>
+        </tr>
+        <tr>
+            <td>Bruce Wayne</td>
+            <td>Clark Kent</td>
+            <td>Tony Stark</td>
+            <td>Hulk</td>
+            <td>Peter Parker</td>
+        </tr>
+
+        <tr>
+            <td>Cannot kill</td>
+            <td>Kryptonite</td>
+            <td>HeartIssues</td>
+            <td>Self Control</td>
+            <td>Ethyl chloride</td>
+        </tr>
+        <tr>
+            <td>Bat like skills</td>
+            <td>Superhuman strength</td>
+            <td>Ability to fly</td>
+            <td>Incredible superhuman strength</td>
+            <td>"Spider" sense alert</td>
+        </tr>
+    </table>
+</body>
+
+</html>
