--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -42,7 +42,10 @@
             <td>Hulk</td>
             <td>Peter Parker</td>
         </tr>
-
+        <tr>
+            <td> <a href="https://pngimg.com/uploads/batman/batman_PNG51.png"><img src="/bacs200/images/batman.png"
+                        alt="batman" width="200" />Full Size Image</a></td>
+        </tr>
         <tr>
             <td>Cannot kill</td>
             <td>Kryptonite</td>
