--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -30,11 +30,19 @@
         </tr>
         <tr>
             <td>Batman</td>
-            <td>Superman</td>
-            <td>Ironman</td>
-            <td>Hulk</td>
-            <td>SpiderMan</td>
+            <td>Bruce Wayne</td>
+            <td>
+                <a href="https://pngimg.com/uploads/batman/batman_PNG51.png"><img src="/bacs200/images/Batman.png"
+                        alt="Batman" width="200" />Full Size Image</a>
+            </td>
+            <td>
+                <li>Cannot Kill</li>
+            </td>
+            <td>
+                <li>Bat-Like Abilities</li>
+            </td>
         </tr>
+        <tr>
         <tr>
             <td>Bruce Wayne</td>
             <td>Clark Kent</td>
