--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -36,10 +36,10 @@
                         alt="Batman" width="200" />Full Size Image</a>
             </td>
             <td>
-                <li>Cannot Kill</li>
+                Cannot Kill
             </td>
             <td>
-                <li>Bat-Like Abilities</li>
+                Bat-Like Abilities
             </td>
         </tr>
         <tr>
