--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -42,18 +42,19 @@
                 Bat-Like Abilities
             </td>
         </tr>
+
         <tr>
-        <tr>
-            <td>Bruce Wayne</td>
+            <td>Superman</td>
             <td>Clark Kent</td>
-            <td>Tony Stark</td>
-            <td>Hulk</td>
-            <td>Peter Parker</td>
-        </tr>
-        <tr>
             <td>
-                <a href="https://pngimg.com/uploads/batman/batman_PNG51.png"><img src="/bacs200/images/batman.png"
+                <a href="https://pngimg.com/uploads/batman/batman_PNG51.png"><img src="/bacs200/images/Batman.png"
                         alt="Batman" width="200" />Full Size Image</a>
+            </td>
+            <td>
+                Kryptonite
+            </td>
+            <td>
+                Superhuman Strength
             </td>
         </tr>
         <tr>
