--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -58,11 +58,18 @@
             </td>
         </tr>
         <tr>
-            <td>Cannot kill</td>
-            <td>Kryptonite</td>
-            <td>HeartIssues</td>
-            <td>Self Control</td>
-            <td>Ethyl chloride</td>
+            <td>Iron Man</td>
+            <td>Tony Stark</td>
+            <td>
+                <a href="https://pngimg.com/uploads/batman/batman_PNG51.png"><img src="/bacs200/images/Batman.png"
+                        alt="Batman" width="200" />Full Size Image</a>
+            </td>
+            <td>
+                Heart Issues
+            </td>
+            <td>
+                Ability to Fly
+            </td>
         </tr>
         <tr>
             <td>Bat like skills</td>
