--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -72,11 +72,18 @@
             </td>
         </tr>
         <tr>
-            <td>Bat like skills</td>
-            <td>Superhuman strength</td>
-            <td>Ability to fly</td>
-            <td>Incredible superhuman strength</td>
-            <td>"Spider" sense alert</td>
+            <td>Hulk</td>
+            <td>David Banner</td>
+            <td>
+                <a href="https://pngimg.com/uploads/batman/batman_PNG51.png"><img src="/bacs200/images/Batman.png"
+                        alt="Batman" width="200" />Full Size Image</a>
+            </td>
+            <td>
+                Lack of Self Control
+            </td>
+            <td>
+                Incredible Superhuman Strength
+            </td>
         </tr>
     </table>
 </body>
