--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -85,6 +85,20 @@
                 Incredible Superhuman Strength
             </td>
         </tr>
+        <tr>
+            <td>Spider-Man</td>
+            <td>Peter Parker</td>
+            <td>
+                <a href="https://pngimg.com/uploads/batman/batman_PNG51.png"><img src="/bacs200/images/Batman.png"
+                        alt="Batman" width="200" />Full Size Image</a>
+            </td>
+            <td>
+                Ethyl Chloride
+            </td>
+            <td>
+                "Spidey Senses"
+            </td>
+        </tr>
     </table>
 </body>
 
