--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -32,7 +32,8 @@
             <td>Batman</td>
             <td>Bruce Wayne</td>
             <td>
-                <a img src="/bacs200/images/batman.png" alt="Batman" width="200">Full Size Image</a>
+                <a href="https://pngimg.com/uploads/batman/batman_PNG51.png"><img src="/bacs200/images/Batman.png"
+                        alt="Batman" width="200" />Full Size Image</a>
             </td>
             <td>
                 Cannot Kill
