--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -32,7 +32,7 @@
             <td>Batman</td>
             <td>Bruce Wayne</td>
             <td>
-                <a href="https://pngimg.com/uploads/batman/batman_PNG51.png"><img src="/bacs200/images/batman_PNG51.png"
+                <a href="https://pngimg.com/uploads/batman/batman_PNG51.png"><img src="/bacs200/batman_PNG51.png"
                         alt="Batman" width="200" />Full Size Image</a>
             </td>
             <td>
