--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -47,8 +47,8 @@
             <td>Superman</td>
             <td>Clark Kent</td>
             <td>
-                <a href="https://pngimg.com/uploads/batman/batman_PNG51.png"><img src="/bacs200/images/Batman.png"
-                        alt="Batman" width="200" />Full Size Image</a>
+                <a href="https://cdn.imgbin.com/22/17/22/imgbin-superman-Xd7yHWuPndzKjeiswxXi9B5jb.jpg"><img
+                        src="/bacs200/images/Superman.png" alt="Superman" width="200" />Full Size Image</a>
             </td>
             <td>
                 Kryptonite
