--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -2,13 +2,45 @@
 <html lang="en">
 
 <head>
-
-    <title>I totally messed up this project.</title>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="wanted.css" rel="stylesheet">
+    <title>WANTED!!</title>
 </head>
 
 <body>
+    <header>
+        <h1>WANTED!!</h1>
+        <h2>The Joker</h2>
+    </header>
 
+    <aside>
+        <h2>Wanted for:</h2>
+        <ul>
+            <li>Being a psychopath</li>
+            <li>Murder></li>
+            <li>Manipulation</li>
+        </ul>
+    </aside>
+    <section>
+        <p>
+            <img src="/bacs200/images/Wanted.png" alt"This man is desperately wanted" width="500">
+        </p>
+        <h2>Last seen:</h2>
+        <ul>
+            <li>Arkham State Hospital</li>
+            <li>Wearing a red or purple suit</li>>
+            <li>Facial Makeup</li>>
+        </ul>
+    </section>
+
+    </main>
+    <footer>
+        <p>
+            John Evan Latzer Class:Bacs200 Section:970
+        </p>
+    </footer>
 
 
 
