--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -19,7 +19,7 @@
         <h2>Wanted for:</h2>
         <ul>
             <li>Being a psychopath</li>
-            <li>Murder></li>
+            <li>Murder</li>
             <li>Manipulation</li>
         </ul>
     </aside>
