--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -30,8 +30,8 @@
         <h2>Last seen:</h2>
         <ul>
             <li>Arkham State Hospital</li>
-            <li>Wearing a red or purple suit</li>>
-            <li>Facial Makeup</li>>
+            <li>Wearing a red or purple suit</li>
+            <li>Facial Makeup</li>
         </ul>
     </section>
 
