--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -14,26 +14,26 @@
         <h1>WANTED!!</h1>
         <h2>The Joker</h2>
     </header>
-
-    <aside>
-        <h2>Wanted for:</h2>
-        <ul>
-            <li>Being a psychopath</li>
-            <li>Murder</li>
-            <li>Manipulation</li>
-        </ul>
-    </aside>
-    <section>
-        <p>
-            <img src="/bacs200/images/Wanted.png" alt"This man is desperately wanted" width="500">
-        </p>
-        <h2>Last seen:</h2>
-        <ul>
-            <li>Arkham State Hospital</li>
-            <li>Wearing a red or purple suit</li>
-            <li>Facial Makeup</li>
-        </ul>
-    </section>
+    <main>
+        <aside>
+            <h2>Wanted for:</h2>
+            <ul>
+                <li>Being a psychopath</li>
+                <li>Murder</li>
+                <li>Manipulation</li>
+            </ul>
+        </aside>
+        <section>
+            <p>
+                <img src="/bacs200/images/Wanted.png" alt="This man is desperately wanted" width="500">
+            </p>
+            <h2>Last seen:</h2>
+            <ul>
+                <li>Arkham State Hospital</li>
+                <li>Wearing a red or purple suit</li>
+                <li>Facial Makeup</li>
+            </ul>
+        </section>
 
     </main>
     <footer>
