--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -18,9 +18,9 @@
         <aside>
             <h2>Wanted for:</h2>
             <ul>
-                <li>Being a psychopath</li>
+                <li>Being insane</li>
                 <li>Murder</li>
-                <li>Manipulation</li>
+                <li>Abuse</li>
             </ul>
         </aside>
         <section>
