--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -18,7 +18,7 @@
         <aside>
             <h2>Wanted for:</h2>
             <ul>
-                <li>Being insane</li>
+                <li>Insanity</li>
                 <li>Murder</li>
                 <li>Abuse</li>
             </ul>
