--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>WANTED!!</h1>
+        <h1>WANTED!</h1>
         <h2>The Joker</h2>
     </header>
     <main>
