--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>WANTED!</h1>
-        <h2>The Joker</h2>
+        <h2>Joker</h2>
     </header>
     <main>
         <aside>
